# causal

./: .env.example  .gitignore  README.md  causal_cursor_spec.docx  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json
apps/api/: package.json  tsconfig.json  vercel.json
apps/api/src/: app.ts  config.ts  factory.ts  index.ts  seed-demo.ts
apps/api/src/middleware/: auth.ts  rate-limit.ts
apps/api/src/plugins/: neo4j.ts  postgres.ts  redis.ts  s3.ts
apps/api/src/routes/: edges.ts  nodes.ts  postmortem.ts  replay.ts  snapshots.ts  trace.ts
apps/api/src/routes/webhooks/: datadog.ts  github.ts  langsmith.ts  linear.ts  pagerduty.ts  sentry.ts
apps/api/src/services/: autolink.ts  cascade-detector.ts  edges.ts  embeddings.ts  github.ts  nodes.ts  slack.ts  tracegraph.ts
apps/rca/: pyproject.toml
apps/rca/rca/: __init__.py  graph.py  main.py  nodes.py  state.py
apps/web/: next.config.mjs  package.json  tailwind.config.ts
apps/web/public/: blackhole.avif
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/incidents/: page.tsx
apps/web/src/app/incidents/[id]/: layout.tsx  page.tsx
apps/web/src/app/incidents/[id]/postmortem/: page.tsx
apps/web/src/components/: TraceExplorer.tsx
apps/web/src/components/ProvenanceExplorer/: CausalNodeCard.tsx  NodeDetailPanel.tsx  index.tsx
apps/web/src/components/ReplaySandbox/: index.tsx
apps/web/src/lib/: api.ts  mock-data.ts
infra/: docker-compose.yml
infra/neo4j/: schema.cypher
infra/postgres/migrations/: 001_init.sql  002_functions.sql  002_timescale.sql  003_pgvector.sql
(+1 files in other folders)
