[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "causal-rca"
version = "0.1.0"
description = "Causal RCA Engine — LangGraph StateGraph for root cause analysis"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "anthropic>=0.34.0",
    "neo4j>=5.20.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rca"]

[tool.ruff]
line-length = 100
target-version = "py311"
